fix text align

--- a/static/stylesheets/mockupshow.css
+++ b/static/stylesheets/mockupshow.css
@@ -95,7 +95,7 @@
         text-align: center;
     }
     .mockupshow h5 {
-        text-align: justify;
+        text-align: center;
     }
     .mockupshow img {
         width: 70vw;
